# fanju_decoder_arduino_pi

./: DHT.py  Readme.md
arduino/: fanju.ino  tfa.ino
pi/: CMakeLists.txt  DHT.py  ELECHOUSE_CC1101_SRC_DRV.cpp  ELECHOUSE_CC1101_SRC_DRV.h  fanju.cpp  fanju.h  fanju_433.py  fanju_mqtt.py  main.cpp
